# pixel_riscv_soc

./: .gitignore  .gitmodules  README.md  bitstream_generator.sh  vivado_generate_bitstream.sh
fpga/: .gitignore  clear.sh  generate_bitstream.tcl
fpga/constraints/: arty_a7_100.xdc
fpga/rtl/: top_pixel_riscv_soc_arty_a7_100.sv
fpga/scripts/: generate_bitstream_arty.tcl  read_rtls.tcl
rtl/misc/: edge_detector.sv  misc.f
rtl/misc/spi_flash_memory/: spi_flash_memory.sv  spi_mem.sv  spi_slave.sv
rtl/soc/: data_bus_arbiter.sv  instr_bus_arbiter.sv  memory_map.sv  peripherals.sv  pixel_riscv_soc.sv  pixel_riscv_soc_pkg.sv  soc.f
rtl/soc/common/: ibex_data_bus.sv  ibex_instr_bus.sv  rxd_pkg.sv
rtl/soc/gpio/: gpio.sv  gpio_offset_decoder.sv  gpio_pkg.sv
rtl/soc/interfaces/: ibex_data_bus.sv  ibex_instr_bus.sv  soc_gpio_bus.sv  soc_pm_analog_config.sv  soc_pm_ctrl.sv  soc_pm_data.sv  soc_pm_digital_config.sv  soc_pmc_bus.sv  soc_pmc_pm_ctrl.sv  soc_spi_bus.sv  soc_timer_bus.sv  soc_uart_bus.sv
rtl/soc/iomux/: iomux.sv  iomux_pkg.sv
rtl/soc/memories/: boot_mem.sv  boot_rom.sv  code_ram.sv  data_ram.sv  memories.sv
rtl/soc/memories/fpga/: ram.sv
rtl/soc/misc/: edge_detector.sv  fifo.sv  serial_clock_generator.sv
rtl/soc/peripherals/: peripherals.sv
rtl/soc/peripherals/gpio/: gpio.sv  gpio_interrupt_detector.sv  gpio_interrupts_detector.sv  gpio_pkg.sv
rtl/soc/peripherals/pmc/: pmc.sv  pmc_pkg.sv  pmc_receiver.sv  pmc_transmitter.sv
rtl/soc/peripherals/pmc/coprocessor/: pmcc.sv  pmcc_instr_decoder.sv  pmcc_loop_controller.sv  pmcc_loop_lifo.sv  pmcc_matrix_controller.sv  pmcc_pkg.sv
rtl/soc/peripherals/pmc/memories/: pmcc_code_ram.sv  pmcc_dpram.sv
rtl/soc/peripherals/pmc/memories/fpga/: pmcc_dpram.sv
rtl/soc/peripherals/spi/: spi.sv  spi_master.sv  spi_pkg.sv
rtl/soc/peripherals/timer/: timer.sv  timer_core.sv  timer_pkg.sv
rtl/soc/peripherals/uart/: uart.sv  uart_pkg.sv  uart_receiver.sv  uart_transmitter.sv
rtl/soc/pmc/: pmc.sv  pmc_ctrl.sv  pmc_offset_decoder.sv  pmc_pkg.sv  pmc_receiver.sv  pmc_transmitter.sv
rtl/soc/pmc/analog_conf/: pmc_ac.sv  pmc_ac_offset_decoder.sv  pmc_ac_pkg.sv  pmc_analog_conf.sv
rtl/soc/pmc/coprocessor/: pmcc.sv  pmcc_instr_decoder.sv  pmcc_loop_controller.sv  pmcc_loop_lifo.sv  pmcc_matrix_controller.sv  pmcc_wait_controller.sv
rtl/soc/pmc/digital_conf/: pmc_dc.sv  pmc_dc_offset_decoder.sv  pmc_dc_pkg.sv  pmc_digital_conf.sv
rtl/soc/pmc/memories/: pmcc_code_ram.sv
rtl/soc/pmc/memories/asic/: pmcc_dpram.sv
rtl/soc/pmc/memories/fpga/: pmcc_dpram.sv
rtl/soc/spi/: spi.sv  spi_master.sv  spi_offset_decoder.sv  spi_pkg.sv
rtl/soc/timer/: timer.sv  timer_offset_decoder.sv  timer_pkg.sv
rtl/soc/tmr/: timer.sv  tmr.sv  tmr_offset_decoder.sv  tmr_pkg.sv
rtl/soc/uart/: uart.sv  uart_offset_decoder.sv  uart_pkg.sv  uart_receiver.sv  uart_transmitter.sv
sw/: .gitignore  CMakeLists.txt
sw/app/: CMakeLists.txt  Makefile  link.ld
sw/app/src/: crt0.S  main.c  main.cpp
sw/apps/command_interpreter/: CMakeLists.txt
sw/apps/command_interpreter/include/: command.hpp  command_argument.hpp  command_interpreter.hpp  command_parser.hpp
sw/apps/command_interpreter/src/: command_interpreter.cpp  command_parser.cpp  main.cpp
sw/apps/common/: crt0.S
sw/apps/led_toggler/: CMakeLists.txt
sw/apps/led_toggler/src/: main.cpp
sw/bootloader/: CMakeLists.txt  Makefile  crt0.S  link.ld
sw/bootloader/include/: code_loader.h  code_loader.hpp  codeload.h  status_led.h  status_led.hpp
sw/bootloader/src/: code_loader.cpp  codeload.c  crt0.S  main.c  main.cpp  status_led.cpp
sw/command_interpreter/include/: command.h  command_argument.h  command_interpreter.h  command_parser.h
sw/command_interpreter/src/: command_interpreter.cpp  command_parser.cpp  main.cpp
sw/common/: crt0.S  link.ld
sw/drivers/: Makefile
sw/drivers/include/: code_ram.h  gpio.h  interrupt.h  perf_counter.h  pmc.h  spi.h  tmr.h  uart.h
sw/drivers/src/: gpio.c  interrupt.c  spi.c  uart.c
sw/libs/: CMakeLists.txt
sw/libs/command_interpreter/: CMakeLists.txt
sw/libs/command_interpreter/include/: command.h  command_interpreter.h  command_parser.h
sw/libs/command_interpreter/src/: command_interpreter.cpp  command_parser.cpp
sw/libs/drivers/: CMakeLists.txt
sw/libs/drivers/include/: code_ram.h  core.h  gpio.h  pmc.h  pmcc.h  spi.h  timer.h  uart.h
sw/libs/drivers/include/pmc_regs/: pmc_ac.h  pmc_cr.h  pmc_ctrl.h  pmc_dc.h  pmc_sr.h
sw/libs/drivers/include/spi_regs/: spi_cdr.h  spi_cr.h  spi_rdr.h  spi_sr.h  spi_tdr.h
sw/libs/drivers/include/timer_regs/: timer_cr.h  timer_sr.h
sw/libs/drivers/include/uart_regs/: uart_cdr.h  uart_cr.h  uart_rdr.h  uart_sr.h  uart_tdr.h
sw/libs/drivers/src/: code_ram.cpp  core.cpp  gpio.cpp  pmc.cpp  pmcc.cpp  spi.cpp  timer.cpp  uart.cpp
sw/libs/libdrivers/: CMakeLists.txt
sw/libs/libdrivers/include/libdrivers/: code_ram.hpp  common.hpp  core.hpp  gpio.hpp  iomux.hpp  memory_map.hpp  pmc.hpp  spi.hpp  timer.hpp  uart.hpp
sw/libs/libdrivers/src/: code_ram.cpp  common.cpp  core.cpp  gpio.cpp  iomux.cpp  pmc.cpp  spi.cpp  timer.cpp  uart.cpp
sw/libs/libmisc/: CMakeLists.txt
sw/libs/libmisc/include/libmisc/: debug.hpp  delay.hpp  pixel_matrix.hpp  pm.hpp  pm_controller.hpp  pmcc_programmer.hpp  string_ops.hpp  ui.hpp
sw/libs/libmisc/src/: debug.cpp  delay.cpp  pixel_matrix.cpp  pm_controller.cpp  pmcc_programmer.cpp  string_ops.cpp  ui.cpp
sw/libs/misc/: CMakeLists.txt
sw/libs/misc/include/: debug.h  delay.h  pixel_matrix.h  string_ops.h  ui.h
sw/libs/misc/src/: debug.cpp  delay.cpp  pixel_matrix.cpp  string_ops.cpp  ui.cpp
sw/misc/: Makefile
sw/misc/include/: debug_lib.h  delay.h  pm.h  pmcc.h  string_lib.h
sw/misc/src/: debug_lib.c  delay.c  pm.c  pmcc.c  string_lib.c
tools/: bitstream_generator.sh  prs_rom_generator.py  rxd_rom_generator.py  vmem_reader.py
tools/rxd_modules/: vmem_reader.py
